@@ -92,6 +92,8 @@
        in the log dialog. (Stefan Fuhrmann)
 - NEW: The date-range filter controls are hidden if filtering
        for date ranges is not enabled. (Stefan)
+- NEW: pre-connect hook script, useful to start a VPN
+       connection. (Stefan)
 - BUG: Merged revisions must be counted only 
        once in stats (Stefan Fuhrmann)
 - BUG: Relative Webviewer urls didn't work from the 
